# ChordFinder

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec.md
app/: about.html  index.html  package.json  tsconfig.app.json  vite.config.ts
app/public/: robots.txt  sitemap.xml
app/src/: App.css  App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: AppErrorBoundary.tsx  FilterPanel.tsx  FretboardView.tsx  IntervalChipGroup.tsx  StateSummaryBar.tsx  ToggleGroup.tsx  VisualLegend.tsx
app/src/rendering/: fretboardCanvasRenderer.ts  layoutMetrics.ts
app/src/state/: appStateStore.ts  chordBuilder.ts  derivedSelectors.ts  persistence.ts
core/: package.json  tsconfig.json
core/src/: appState.ts  chords.ts  diatonic.ts  filters.ts  fretboardModel.ts  index.ts  intervals.ts  noteNaming.ts  pitchClass.ts  scales.ts
core/tests/: appState.test.ts  chords.test.ts  diatonic.test.ts  filters.test.ts  fretboardModel.test.ts  indexExports.test.ts  intervals.test.ts  noteNaming.test.ts  pitchClass.test.ts  scales.test.ts
docs/: deploy.md  release-audit.md
